unpackaged/main/default/objects/Remote_Work_Request__c/Remote_Work_Request__c.object-meta.xml
<CustomObject>
    <label>Remote Work Request</label>
    <nameField>
        <displayFormat>RWR-{0000}</displayFormat>
        <label>Remote Work Request Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Remote Work Request</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>