unpackaged/main/default/objects/Remote_Work_Request__c/fields/pro_Calendar_Description__c.field-meta.xml
<CustomField>
    <fullName>pro_Calendar_Description__c</fullName>
    <description>AB 21/07/2023 - Prodigy</description>
    <formula>Name + &quot; - &quot; + pro_Employee_Remote_Request__r.Employee_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Calendar Description</label>
    <type>Text</type>
</CustomField>