unpackaged/main/default/objects/Remote_Work_Request__c/fields/pro_Comment__c.field-meta.xml
<CustomField>
    <fullName>pro_Comment__c</fullName>
    <description>AB 20/07/2023 - Prodigy</description>
    <label>Comment</label>
    <type>TextArea</type>
</CustomField>