unpackaged/main/default/objects/Remote_Work_Request__c/fields/pro_Duration_of_Remote_Work__c.field-meta.xml
<CustomField>
    <fullName>pro_Duration_of_Remote_Work__c</fullName>
    <description>AB 11/09/2023 - Created by Prodigy</description>
    <formula>IF(pro_End_Date__c = pro_Start_Date__c, 1, (pro_End_Date__c - pro_Start_Date__c) + 1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Duration of Remote Work</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>