unpackaged/main/default/objects/Remote_Work_Request__c/fields/pro_Employee_Remote_Request__c.field-meta.xml
<CustomField>
    <fullName>pro_Employee_Remote_Request__c</fullName>
    <description>AB 20/0/2023 - Prodigy</description>
    <label>Employee Remote Request</label>
    <referenceTo>GlicW__Resource__c</referenceTo>
    <relationshipLabel>Remote Work Request</relationshipLabel>
    <relationshipName>Remote_Work_Request</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>