unpackaged/main/default/objects/Remote_Work_Request__c/fields/pro_My_Team__c.field-meta.xml
<CustomField>
    <fullName>pro_My_Team__c</fullName>
    <description>AB 30/08/2023 - Prodigy</description>
    <formula>OR(
CASESAFEID($User.Id) = CASESAFEID(pro_Employee_Remote_Request__r.GlicW__User__c),
$User.pro_Projo_Department__c = pro_Employee_Remote_Request__r.GlicW__User__r.pro_Projo_Department__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>My Team</label>
    <type>Checkbox</type>
</CustomField>