unpackaged/main/default/objects/Remote_Work_Request__c/fields/pro_My_Team_and_Me__c.field-meta.xml
<CustomField>
    <fullName>pro_My_Team_and_Me__c</fullName>
    <description>JP 20/08/2023 - Created by Prodigy</description>
    <formula>OR(
$User.Id = pro_Employee_Remote_Request__r.GlicW__User__c ,
$User.Id =  pro_Employee_Remote_Request__r.GlicW__Manager__r.GlicW__User__c)</formula>
    <label>My Team and Me</label>
    <type>Checkbox</type>
</CustomField>