unpackaged/main/default/objects/Remote_Work_Request__c/fields/pro_Owner_Id__c.field-meta.xml
<CustomField>
    <fullName>pro_Owner_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>AB 10/08/2023 - prodigy</description>
    <label>Owner Id</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Remote_Work_Request1</relationshipName>
    <type>Lookup</type>
</CustomField>