unpackaged/main/default/objects/Remote_Work_Request__c/fields/pro_Remote_Days__c.field-meta.xml
<CustomField>
    <fullName>pro_Remote_Days__c</fullName>
    <formula>pro_End_Date__c - pro_Start_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>