unpackaged/main/default/objects/Remote_Work_Request__c/fields/pro_Remote_Manager__c.field-meta.xml
<CustomField>
    <fullName>pro_Remote_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Remote_Work_Request</relationshipName>
    <type>Lookup</type>
</CustomField>