unpackaged/main/default/objects/Remote_Work_Request__c/fields/pro_Resource_Department__c.field-meta.xml
<CustomField>
    <fullName>pro_Resource_Department__c</fullName>
    <description>JP 01/11/2023 - Created by Prodigy</description>
    <formula>TEXT(pro_Employee_Remote_Request__r.Department__c)</formula>
    <label>Resource Department</label>
    <type>Text</type>
</CustomField>