unpackaged/main/default/objects/Remote_Work_Request__c/fields/pro_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>pro_Start_Date__c</fullName>
    <description>AB 20/07/2023 - Prodigy</description>
    <label>Start Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>