unpackaged/main/default/objects/Remote_Work_Request__c/fields/pro_User_Is_Employee__c.field-meta.xml
<CustomField>
    <fullName>pro_User_Is_Employee__c</fullName>
    <formula>OR(
pro_Owner_Id__c =  $User.Id,
pro_Remote_Manager__c = $User.Id 
)</formula>
    <label>User Is Employee?</label>
    <type>Checkbox</type>
</CustomField>