unpackaged/main/default/objects/Remote_Work_Request__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>pro_Employee_Remote_Request__c</columns>
    <columns>pro_Start_Date__c</columns>
    <columns>pro_End_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>