unpackaged/main/default/objects/Remote_Work_Request__c/listViews/My_Team_and_me.listView-meta.xml
<ListView>
    <fullName>My_Team_and_me</fullName>
    <columns>NAME</columns>
    <columns>pro_Calendar_Description__c</columns>
    <columns>pro_Start_Date__c</columns>
    <columns>pro_End_Date__c</columns>
    <columns>pro_Employee_Remote_Request__c</columns>
    <filterScope>Everything</filterScope>
    <label>My Team and me</label>
    <sharedTo>
        <group>HR_Group</group>
    </sharedTo>
</ListView>