unpackaged/main/default/objects/Remote_Work_Request__c/listViews/pro_My_Team.listView-meta.xml
<ListView>
    <fullName>pro_My_Team</fullName>
    <columns>NAME</columns>
    <columns>pro_Employee_Remote_Request__c</columns>
    <columns>pro_Start_Date__c</columns>
    <columns>pro_End_Date__c</columns>
    <columns>pro_Duration_of_Remote_Work__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>pro_My_Team__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>pro_Status__c</field>
        <operation>equals</operation>
        <value>Approved</value>
    </filters>
    <label>My Teams Remote Work</label>
</ListView>