unpackaged/main/default/objects/Remote_Work_Request__c/listViews/Repairs_Team.listView-meta.xml
<ListView>
    <fullName>Repairs_Team</fullName>
    <columns>NAME</columns>
    <columns>pro_Calendar_Description__c</columns>
    <columns>pro_Employee_Remote_Request__c</columns>
    <filterScope>Everything</filterScope>
    <label>Repairs Team</label>
</ListView>