unpackaged/main/default/objects/Remote_Work_Request__c/listViews/team.listView-meta.xml
<ListView>
    <fullName>team</fullName>
    <columns>NAME</columns>
    <columns>pro_Calendar_Description__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>pro_My_Team__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>team</label>
</ListView>